// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons render correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#1473E6",
      "borderRadius": 12,
      "borderWidth": 3,
      "elevation": 4,
      "height": 58,
      "justifyContent": "center",
      "opacity": 1,
      "width": 100,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1473E6",
        "fontFamily": "Raleway-SemiBold",
        "fontSize": 15,
        "padding": 8,
        "textAlign": "center",
      }
    }
  >
    NEXT
  </Text>
</View>
`;

exports[`Icons render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "#1473E6",
        "fontSize": 130,
      },
      undefined,
      Object {
        "fontFamily": "Material Design Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`NonFixedEvent renders correctly 1`] = `
<View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "marginTop": 90,
        "paddingLeft": 35,
        "paddingRight": 35,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#1473E6",
                "fontSize": 130,
              },
              undefined,
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "color": "#565454",
              "fontFamily": "Raleway-Regular",
              "fontSize": 20,
              "marginLeft": 15,
              "width": 205,
            }
          }
        >
          Add the events you would like Kalend to plan for you
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#0A2239",
              "fontFamily": "Raleway-Medium",
              "fontSize": 19,
              "marginBottom": 5,
              "marginTop": 10,
            }
          }
        >
          Availability
        </Text>
        <View
          style={
            Object {
              "marginLeft": 10,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-SemiBold",
                  "fontSize": 17,
                  "width": 200,
                }
              }
            >
              Specific Date Range
            </Text>
            <RCTSwitch
              accessibilityRole="button"
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              onTintColor="#FFBF69"
              style={
                Array [
                  Object {
                    "height": 31,
                    "width": 51,
                  },
                  Object {
                    "backgroundColor": "lightgray",
                    "borderRadius": 16,
                  },
                ]
              }
              thumbTintColor="#FF9F1C"
              tintColor="lightgray"
              value={false}
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-SemiBold",
                  "fontSize": 17,
                  "width": 88,
                }
              }
            >
              Start Date
            </Text>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "width": 142,
                  },
                  Object {
                    "width": 140,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderColor": "#aaa",
                        "borderWidth": 1,
                        "flex": 1,
                        "height": 40,
                        "justifyContent": "center",
                      },
                      Object {
                        "borderWidth": 0,
                      },
                      false,
                      false,
                    ]
                  }
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      Array [
                        Object {
                          "color": "#333",
                        },
                        Object {
                          "color": "#565454",
                          "fontFamily": "OpenSans-Regular",
                        },
                      ]
                    }
                  >
                    Tue., Feb 19, 2019
                  </Text>
                </View>
                <Modal
                  animationType="none"
                  hardwareAccelerated={false}
                  onRequestClose={[Function]}
                  supportedOrientations={
                    Array [
                      "portrait",
                      "portrait-upside-down",
                      "landscape",
                      "landscape-left",
                      "landscape-right",
                    ]
                  }
                  transparent={true}
                  visible={false}
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "flex-end",
                          "backgroundColor": "#00000077",
                          "flex": 1,
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#fff",
                              "height": 0,
                              "overflow": "hidden",
                            }
                          }
                        >
                          <View
                            pointerEvents="auto"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderTopColor": "#ccc",
                                    "borderTopWidth": 1,
                                    "marginTop": 42,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <RCTDatePicker
                                date={1550552400000}
                                maximumDate={8640000000000000}
                                minimumDate={1550552400000}
                                mode="date"
                                onChange={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "height": 216,
                                  }
                                }
                                timeZoneOffsetInMinutes={null}
                              />
                            </View>
                          </View>
                          <View
                            accessible={true}
                            isTVSelectable={true}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 42,
                                  "justifyContent": "center",
                                  "paddingHorizontal": 20,
                                  "position": "absolute",
                                  "top": 0,
                                },
                                Object {
                                  "left": 0,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#46cf98",
                                    "fontSize": 16,
                                  },
                                  Object {
                                    "color": "#666",
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Cancel
                            </Text>
                          </View>
                          <View
                            accessible={true}
                            isTVSelectable={true}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 42,
                                  "justifyContent": "center",
                                  "paddingHorizontal": 20,
                                  "position": "absolute",
                                  "top": 0,
                                },
                                Object {
                                  "right": 0,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#46cf98",
                                    "fontSize": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Confirm
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </Modal>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-SemiBold",
                  "fontSize": 17,
                  "width": 88,
                }
              }
            >
              End Date
            </Text>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "width": 142,
                  },
                  Object {
                    "width": 140,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "borderColor": "#aaa",
                        "borderWidth": 1,
                        "flex": 1,
                        "height": 40,
                        "justifyContent": "center",
                      },
                      Object {
                        "borderWidth": 0,
                      },
                      Object {
                        "backgroundColor": "#eee",
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={true}
                    style={
                      Array [
                        Object {
                          "color": "#333",
                        },
                        Object {
                          "color": "#FF0000",
                          "fontFamily": "OpenSans-Regular",
                        },
                      ]
                    }
                  >
                    Tue., Feb 19, 2019
                  </Text>
                </View>
                <Modal
                  animationType="none"
                  hardwareAccelerated={false}
                  onRequestClose={[Function]}
                  supportedOrientations={
                    Array [
                      "portrait",
                      "portrait-upside-down",
                      "landscape",
                      "landscape-left",
                      "landscape-right",
                    ]
                  }
                  transparent={true}
                  visible={false}
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "flex-end",
                          "backgroundColor": "#00000077",
                          "flex": 1,
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#fff",
                              "height": 0,
                              "overflow": "hidden",
                            }
                          }
                        >
                          <View
                            pointerEvents="auto"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "borderTopColor": "#ccc",
                                    "borderTopWidth": 1,
                                    "marginTop": 42,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <RCTDatePicker
                                date={1550552400000}
                                mode="date"
                                onChange={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "height": 216,
                                  }
                                }
                                timeZoneOffsetInMinutes={null}
                              />
                            </View>
                          </View>
                          <View
                            accessible={true}
                            isTVSelectable={true}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 42,
                                  "justifyContent": "center",
                                  "paddingHorizontal": 20,
                                  "position": "absolute",
                                  "top": 0,
                                },
                                Object {
                                  "left": 0,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#46cf98",
                                    "fontSize": 16,
                                  },
                                  Object {
                                    "color": "#666",
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Cancel
                            </Text>
                          </View>
                          <View
                            accessible={true}
                            isTVSelectable={true}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 42,
                                  "justifyContent": "center",
                                  "paddingHorizontal": 20,
                                  "position": "absolute",
                                  "top": 0,
                                },
                                Object {
                                  "right": 0,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#46cf98",
                                    "fontSize": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Confirm
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </Modal>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 5,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-SemiBold",
                  "fontSize": 17,
                  "width": 88,
                }
              }
            >
              Duration
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "borderColor": "lightgray",
                      "height": 88,
                      "width": 220,
                    },
                    Object {
                      "borderRadius": 15.84,
                    },
                    Object {},
                  ]
                }
              >
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFBF69",
                      "borderBottomLeftRadius": 15.84,
                      "borderTopLeftRadius": 15.84,
                      "borderWidth": 0,
                      "height": 86,
                      "justifyContent": "center",
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 66,
                      "zIndex": -1,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 33.44,
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "fontWeight": "900",
                          },
                          Object {
                            "color": "white",
                          },
                          Object {},
                          Object {},
                        ],
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignSelf": "center",
                        "borderLeftColor": "lightgray",
                        "borderLeftWidth": 1,
                        "borderRightColor": "lightgray",
                        "borderRightWidth": 1,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    editable={true}
                    keyboardType="numeric"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    returnKeyType="done"
                    style={
                      Array [
                        Object {
                          "padding": 0,
                          "textAlign": "center",
                        },
                        Object {
                          "borderLeftColor": "lightgray",
                          "borderLeftWidth": 1,
                          "borderRightColor": "lightgray",
                          "borderRightWidth": 1,
                          "color": "#565454",
                          "fontSize": 33.44,
                          "height": 88,
                          "width": 88,
                        },
                        Object {},
                      ]
                    }
                    underlineColorAndroid="rgba(0,0,0,0)"
                    value="0"
                  />
                </View>
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FF9F1C",
                      "borderBottomRightRadius": 15.84,
                      "borderTopRightRadius": 15.84,
                      "borderWidth": 0,
                      "height": 86,
                      "justifyContent": "center",
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "width": 66,
                      "zIndex": -1,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 33.44,
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "fontWeight": "900",
                          },
                          Object {
                            "color": "white",
                          },
                          Object {},
                          Object {},
                        ],
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#565454",
                    "fontFamily": "OpenSans-Regular",
                  }
                }
              >
                hour(s)
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "borderColor": "lightgray",
                      "height": 88,
                      "width": 220,
                    },
                    Object {
                      "borderRadius": 15.84,
                    },
                    Object {},
                  ]
                }
              >
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFBF69",
                      "borderBottomLeftRadius": 15.84,
                      "borderTopLeftRadius": 15.84,
                      "borderWidth": 0,
                      "height": 86,
                      "justifyContent": "center",
                      "left": 0,
                      "opacity": 1,
                      "position": "absolute",
                      "width": 66,
                      "zIndex": -1,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 33.44,
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "fontWeight": "900",
                          },
                          Object {
                            "color": "white",
                          },
                          Object {},
                          Object {},
                        ],
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignSelf": "center",
                        "borderLeftColor": "lightgray",
                        "borderLeftWidth": 1,
                        "borderRightColor": "lightgray",
                        "borderRightWidth": 1,
                      },
                    ]
                  }
                >
                  <TextInput
                    allowFontScaling={true}
                    editable={true}
                    keyboardType="numeric"
                    onBlur={[Function]}
                    onChangeText={[Function]}
                    onFocus={[Function]}
                    returnKeyType="done"
                    style={
                      Array [
                        Object {
                          "padding": 0,
                          "textAlign": "center",
                        },
                        Object {
                          "borderLeftColor": "lightgray",
                          "borderLeftWidth": 1,
                          "borderRightColor": "lightgray",
                          "borderRightWidth": 1,
                          "color": "#565454",
                          "fontSize": 33.44,
                          "height": 88,
                          "width": 88,
                        },
                        Object {},
                      ]
                    }
                    underlineColorAndroid="rgba(0,0,0,0)"
                    value="0"
                  />
                </View>
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FF9F1C",
                      "borderBottomRightRadius": 15.84,
                      "borderTopRightRadius": 15.84,
                      "borderWidth": 0,
                      "height": 86,
                      "justifyContent": "center",
                      "opacity": 1,
                      "position": "absolute",
                      "right": 0,
                      "width": 66,
                      "zIndex": -1,
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": undefined,
                          "fontSize": 33.44,
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "fontWeight": "900",
                          },
                          Object {
                            "color": "white",
                          },
                          Object {},
                          Object {},
                        ],
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#565454",
                    "fontFamily": "OpenSans-Regular",
                  }
                }
              >
                minute(s)
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-SemiBold",
                  "fontSize": 17,
                  "width": 200,
                }
              }
            >
              Number of Occurrence
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "borderColor": "lightgray",
                    "height": 88,
                    "width": 220,
                  },
                  Object {
                    "borderRadius": 15.84,
                  },
                  Object {},
                ]
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFBF69",
                    "borderBottomLeftRadius": 15.84,
                    "borderTopLeftRadius": 15.84,
                    "borderWidth": 0,
                    "height": 86,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "width": 66,
                    "zIndex": -1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 33.44,
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "fontWeight": "900",
                        },
                        Object {
                          "color": "white",
                        },
                        Object {},
                        Object {},
                      ],
                      Object {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignSelf": "center",
                      "borderLeftColor": "lightgray",
                      "borderLeftWidth": 1,
                      "borderRightColor": "lightgray",
                      "borderRightWidth": 1,
                    },
                  ]
                }
              >
                <TextInput
                  allowFontScaling={true}
                  editable={true}
                  keyboardType="numeric"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  returnKeyType="done"
                  style={
                    Array [
                      Object {
                        "padding": 0,
                        "textAlign": "center",
                      },
                      Object {
                        "borderLeftColor": "lightgray",
                        "borderLeftWidth": 1,
                        "borderRightColor": "lightgray",
                        "borderRightWidth": 1,
                        "color": "#565454",
                        "fontSize": 33.44,
                        "height": 88,
                        "width": 88,
                      },
                      Object {},
                    ]
                  }
                  underlineColorAndroid="rgba(0,0,0,0)"
                  value="0"
                />
              </View>
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FF9F1C",
                    "borderBottomRightRadius": 15.84,
                    "borderTopRightRadius": 15.84,
                    "borderWidth": 0,
                    "height": 86,
                    "justifyContent": "center",
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "width": 66,
                    "zIndex": -1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 33.44,
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "fontWeight": "900",
                        },
                        Object {
                          "color": "white",
                        },
                        Object {},
                        Object {},
                      ],
                      Object {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": "#0A2239",
              "fontFamily": "Raleway-Medium",
              "fontSize": 19,
              "marginBottom": 5,
              "marginTop": 10,
            }
          }
        >
          Priority Level
        </Text>
        <RCTSlider
          disabled={false}
          enabled={true}
          maximumValue={1}
          minimumTrackTintColor="#FFBF69"
          minimumValue={0}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onValueChange={[Function]}
          step={0.5}
          style={
            Object {
              "height": 40,
            }
          }
          thumbTintColor="#FF9F1C"
          value={0}
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#565454",
                "fontFamily": "OpenSans-Regular",
              }
            }
          >
            Low
          </Text>
          <Text
            style={
              Object {
                "color": "#565454",
                "fontFamily": "OpenSans-Regular",
              }
            }
          >
            Normal
          </Text>
          <Text
            style={
              Object {
                "color": "#565454",
                "fontFamily": "OpenSans-Regular",
              }
            }
          >
            High
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginTop": 15,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#1473E6",
              "borderColor": "#1473E6",
              "borderRadius": 12,
              "borderWidth": 3,
              "elevation": 4,
              "height": 58,
              "justifyContent": "center",
              "marginRight": 25,
              "opacity": 1,
              "width": 150,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Raleway-SemiBold",
                "fontSize": 15,
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            ADD ANOTHER
            

            EVENT
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#1473E6",
              "borderRadius": 12,
              "borderWidth": 3,
              "elevation": 4,
              "height": 58,
              "justifyContent": "center",
              "opacity": 1,
              "width": 100,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#1473E6",
                "fontFamily": "Raleway-SemiBold",
                "fontSize": 15,
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            FINISH
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 10,
            "marginTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#1473E6",
                "fontFamily": "Raleway-Regular",
                "fontSize": 15,
                "textShadowColor": "rgba(0, 0, 0, 0.40)",
                "textShadowOffset": Object {
                  "height": 1,
                  "width": -1,
                },
                "textShadowRadius": 10,
              }
            }
          >
            Skip
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginLeft": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgba(20, 115, 230, 0.50)",
                  "fontSize": 20,
                },
                Object {
                  "width": 20,
                },
                Object {
                  "fontFamily": "Octicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgba(20, 115, 230, 0.50)",
                  "fontSize": 20,
                },
                Object {
                  "width": 20,
                },
                Object {
                  "fontFamily": "Octicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#1473E6",
                  "fontSize": 20,
                },
                Object {
                  "width": 20,
                },
                Object {
                  "fontFamily": "Octicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgba(20, 115, 230, 0.50)",
                  "fontSize": 20,
                },
                Object {
                  "width": 20,
                },
                Object {
                  "fontFamily": "Octicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgba(20, 115, 230, 0.50)",
                  "fontSize": 20,
                },
                Object {
                  "width": 20,
                },
                Object {
                  "fontFamily": "Octicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1473E6",
                  "fontFamily": "Raleway-Regular",
                  "fontSize": 15,
                  "textShadowColor": "rgba(0, 0, 0, 0.40)",
                  "textShadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "textShadowRadius": 10,
                }
              }
            >
              Skip
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NumericInputs render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "borderColor": "lightgray",
        "height": 88,
        "width": 220,
      },
      Object {
        "borderRadius": 15.84,
      },
      Object {},
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFBF69",
        "borderBottomLeftRadius": 15.84,
        "borderTopLeftRadius": 15.84,
        "borderWidth": 0,
        "height": 86,
        "justifyContent": "center",
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "width": 66,
        "zIndex": -1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 33.44,
          },
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "fontWeight": "900",
            },
            Object {
              "color": "white",
            },
            Object {},
            Object {},
          ],
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderLeftColor": "lightgray",
          "borderLeftWidth": 1,
          "borderRightColor": "lightgray",
          "borderRightWidth": 1,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="numeric"
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      returnKeyType="done"
      style={
        Array [
          Object {
            "padding": 0,
            "textAlign": "center",
          },
          Object {
            "borderLeftColor": "lightgray",
            "borderLeftWidth": 1,
            "borderRightColor": "lightgray",
            "borderRightWidth": 1,
            "color": "#565454",
            "fontSize": 33.44,
            "height": 88,
            "width": 88,
          },
          Object {},
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value="0"
    />
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF9F1C",
        "borderBottomRightRadius": 15.84,
        "borderTopRightRadius": 15.84,
        "borderWidth": 0,
        "height": 86,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "width": 66,
        "zIndex": -1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 33.44,
          },
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "fontWeight": "900",
            },
            Object {
              "color": "white",
            },
            Object {},
            Object {},
          ],
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Slider renders correctly 1`] = `
<RCTSlider
  disabled={false}
  enabled={true}
  maximumValue={1}
  minimumTrackTintColor="#FFBF69"
  minimumValue={0}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  step={0.5}
  style={
    Object {
      "height": 40,
    }
  }
  thumbTintColor="#FF9F1C"
  value={0}
/>
`;

exports[`StatusBar renders correctly 1`] = `null`;

exports[`Switch renders correctly 1`] = `
<RCTSwitch
  accessibilityRole="button"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#FFBF69"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "backgroundColor": "lightgray",
        "borderRadius": 16,
      },
    ]
  }
  thumbTintColor="#FF9F1C"
  tintColor="lightgray"
  value={false}
/>
`;
